--- a/app/assets/javascripts/backbone/templates/organizations/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/organizations/index.jst.ejs
@@ -1,5 +1,16 @@
-<div class="content-left" id="organizations-list">
+<!-- <div class="content-left" id="organizations-list">
   <div class="left-header">Your Organizations:</div>
   <ul class="left-list"></ul>
 </div>
-<div class="main"></div>
+<div class="main"></div> -->
+<div class="organizations">
+  <div class="content-left">
+    <div class="left-header">Your Organizations:</div>
+    <ul class="left-list"></ul>
+  </div>
+  <div class="organizations-main">
+    <ul class="main-menu">
+    </ul>
+    <div class="main-content"></div>
+  </div>
+</div>
