--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,30 +1,30 @@
-@font-face {
-  font-family: "MyMyriad";
-  font-style: normal;
-  font-weight: 200;
-  src: local("MyMyriad"), 
-    url(/assets/MyriadPro-LightSemiExt.otf) format("opentype");
-}
-
-@font-face {
-  font-family: "MyMyriad";
-  font-style: normal;
-  font-weight: 400;
-  src: local("MyMyriad"), 
-    url(/assets/MyriadPro-Regular.otf) format("opentype");
-}
-
-@font-face {
-  font-family: "MyMyriad";
-  font-style: normal;
-  font-weight: 700;
-  src: local("MyMyriad"), 
-    url(/assets/MyriadPro-Semibold.otf) format("opentype");
-}
+// @font-face {
+//   font-family: "MyMyriad";
+//   font-style: normal;
+//   font-weight: 200;
+//   src: local("MyMyriad"), 
+//     url(/assets/MyriadPro-LightSemiExt.otf) format("opentype");
+// }
+// 
+// @font-face {
+//   font-family: "MyMyriad";
+//   font-style: normal;
+//   font-weight: 400;
+//   src: local("MyMyriad"), 
+//     url(/assets/MyriadPro-Regular.otf) format("opentype");
+// }
+// 
+// @font-face {
+//   font-family: "MyMyriad";
+//   font-style: normal;
+//   font-weight: 700;
+//   src: local("MyMyriad"), 
+//     url(/assets/MyriadPro-Semibold.otf) format("opentype");
+// }
 
 $yellow: rgba(255,203,5,1);
 $blue: #4BA6FF;
-$font: 13px;
+$font: 12px;
 $min_width: 1000px;
 
 /* =============  GLOBAL STYLES =========== */
@@ -32,7 +32,7 @@ $min_width: 1000px;
 body {
   margin: 0px;
   padding: 0px;
-  font-family: "MyMyriad", "HelveticaNeue", helvetica;
+  @include HN-Regular;
   font-size: $font;
 }
 
@@ -104,7 +104,6 @@ $side_padding: 15px;
 #logo {
   a {
     color: $blue;
-    // font-family: HNLight;
     font-weight: 200;
     font-size: 20px;
     line-height: $header_height;
