--- a/app/assets/stylesheets/organizations.css.scss
+++ b/app/assets/stylesheets/organizations.css.scss
@@ -1,150 +1,45 @@
 /* ========== LAYOUT ========= */
 
-$organization-width: 380px;
+$full-width: 1000px;
+$left-width: 250px;
+$main-width: 750px;
 
-.left-header {
-  padding: 15px;
-  // font-family: HN;
-  
+.organizations {
+  width: $full-width;
+  margin: auto;
+  position: relative;
+  margin-top: 10px;
 }
 
-li {
+.content-left {
+  width: $left-width;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+
+.organizations-main {
+  width: $main-width;
+  margin-left: $left-width;
+}
+
+ul.main-menu {
+  margin: 0px;
+  padding: 0px;
+  width: $main-width;
+  height: 60px;
   border-bottom: 1px solid #dadada;
-  width: 100%;
+  li {
+    border: 0px;
+    float: left;    
+  }
   a {
     display: block;
-    padding: 15px;
-    // font-family: HNBold;
-    font-weight: bold;
-    font-size: 15px;
-    color: black;
-    outline: none;
-    @include transition(0.2s);
-    &:hover {
-      text-decoration: none;
-      @include linear-gradient(#efefef, #fafafa);
-    }
-    &.active {
-      @include linear-gradient(#efefef, #efefef);
-    }
-  }
-  &.selected {
-    border-right: 1px solid white;
-    a:hover {
+    padding: 20px;
+    background: #eee;
+    &.selected {
       background: white;
-    }
-    a:active {
-      background: white;
-    }
-  }
-}
-
-#organization {
-  padding: 20px 30px;
-  position: relative;
-}
-
-#organization-form {
-  #new-image {
-    width: 0px;
-    height: 0px;
-    padding: 0px;
-    margin: 0px;
-    border: 0px;
-  }
-  #open-image {
-    display: inline-block;
-    vertical-align: top;
-    margin-top: 5px;
-    width: 120px;
-    border: 1px solid #777;
-    border-radius: 5px;
-    padding: 5px;
-    text-align: center;
-    @include linear-gradient(#fafafa, #eee);
-    cursor: pointer;
-    &:hover {
-      @include linear-gradient(#fafafa, #fafafa);
-    }
-  }
-  .image {
-    display: inline-block;
-    width: 100px;
-    height: 100px;
-    margin-top: 5px;
-    margin-bottom: 20px;
-    margin-right: 10px;
-    border: 1px solid #dadada;
-  }
-}
-
-.image.loading {
-  background: url('/assets/ajax-loader.gif');
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-#organization-events {
-  position: absolute;
-  left: $organization-width;
-  top: 20px;
-  padding-left: 30px;
-  border-left: 1px solid #dadada;
-  table {
-    width: 400px;
-  }
-}
-
-.organization-event {
-  border-bottom: 1px solid #dadada;
-  td {
-    padding: 10px 0px;
-    .image {
-      width: 50px;
-      min-height: 50px;
-      border: 1px solid #dadada;
-    }
-  }
-}
-
-#new-event-form {
-  @include transition(0.5s);
-}
-
-form {
-  label {
-    // font-family: HNLight;
-    font-weight: 200;
-  }
-  input, textarea {
-    border: 1px solid #dadada;
-    width: 300px;
-    padding: 10px;
-    margin-bottom: 20px;
-  }
-  input {
-    font-size: 15px;
-  }
-  textarea {
-    border-radius: 0px;
-    outline: none;
-    resize: none;
-  }
-  button[type="submit"] {
-    @include linear-gradient(#4BA6FF, #1B82E6);
-    width: 322px;
-    padding: 0px;
-    border: 1px solid #1565B2;
-    line-height: 40px;
-    border-radius: 5px;
-    color: white;
-    text-shadow: -1px -1px 1px #777;
-    @include transition(0.2s);
-    &:hover {
-      @include linear-gradient(#4BA6FF, #4BA6FF);
-    }
-    &:active {
-      @include linear-gradient(#1B82E6, #4BA6FF);
+      border-bottom: 1px solid white;
     }
   }
 }
