solr start and event form start

--- a/app/assets/javascripts/backbone/templates/organizations/events/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/organizations/events/index.jst.ejs
@@ -1,4 +1,15 @@
 <div id="organization-events">
+  <div id="event-form">
+    <button id="close-event">Close</button>
+    <form id="new-event">
+      <input name="name" placeholder="Event Name"/>
+      <input name="start_at" placeholder="Start At"/>
+      <input name="end_at" placeholder="End At"/>
+      <input name="location" placeholder="Location"/>
+      <textarea name="description"></textarea>
+      <button type="submit">Save Event</button>
+    </form>
+  </div>
   <button id="new-event">New Event</button>
   <table id='organization-events-list'></table>
 </div>
