--- a/app/assets/stylesheets/organizations.css.scss
+++ b/app/assets/stylesheets/organizations.css.scss
@@ -43,3 +43,12 @@ ul.main-menu {
     }
   }
 }
+
+#organization-events {
+  #event-form {
+    display: none;
+    &.open {
+      display: block;
+    }
+  }
+}
