--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -80,7 +80,7 @@ $side_padding: 15px;
 .header {
   height: $header_height;
   background: white;
-  @include box-shadow(0 0 3px rgba(0,0,0,0.33));
+  @include box-shadow(0 1px 2px rgba(0, 0, 0, 0.33));
   position: fixed;
   top: 0px;
   left: 0px;
