ability to create events

--- a/app/assets/javascripts/backbone/templates/organizations/events/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/organizations/events/index.jst.ejs
@@ -6,7 +6,7 @@
       <input name="start_at" placeholder="Start At"/>
       <input name="end_at" placeholder="End At"/>
       <input name="location" placeholder="Location"/>
-      <textarea name="description"></textarea>
+      <textarea name="description" placeholder="Description"></textarea>
       <button type="submit">Save Event</button>
     </form>
   </div>
