--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -162,12 +162,11 @@ $left_width: 300px;
 .content-left, .main {
   position: absolute;
   top: 0;
-  height: 100%; 
+  //height: 100%; 
 }
 .content-left {
   left: 0;
   width: $left_width;
-  border-right: 1px solid #ccc;
 }
 
 .left-list {
