search and design

--- a/app/assets/javascripts/backbone/templates/organizations/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/organizations/index.jst.ejs
@@ -1,9 +1,12 @@
-<div class="organizations">
+<div class="content-header">
+  <h1>Organization Dashboard</h1>
+</div>
+<div class="content-container">
   <div class="content-left">
     <div class="left-header">Your Organizations:</div>
     <ul class="left-list"></ul>
   </div>
-  <div class="organizations-main">
+  <div class="content-main">
     <ul class="main-menu">
     </ul>
     <div class="main-content"></div>
