--- a/app/assets/stylesheets/browse.css.scss
+++ b/app/assets/stylesheets/browse.css.scss
@@ -1,9 +1,10 @@
 /* ========== LAYOUT ========= */
 
 .left-search input {
-  margin: 18px 15px;
-  padding: 8px;
-  width: 252px;
+  width: 210px;
+  padding: 15px;
+  border: 0px;
+  border-top: 1px solid #dadada;
   @include HN-Regular;
   
 }
@@ -30,12 +31,59 @@ li {
 }
 
 #browse-list {
-  padding: 10px;
+  padding-left: 10px;
   .browse-result {
     display: inline-block;
-    width: 350px;
+    width: 365px;
     border: 1px solid #eee;
-    padding: 15px;
-    margin: 5px;
+    margin-bottom: 15px;
+    vertical-align: top;
+    &:nth-child(odd) {
+      margin-right: 15px;
+    }
+    .cover {
+      width: 100%;
+      height: 100px;
+      background: $blue;
+    }
+    .content {
+      background: white;
+      padding: 15px;
+      position: relative;
+      border-top: 1px solid #DADADA;
+    }
+    .organization {
+      position: absolute;
+      background: white;
+      border: 1px solid #DADADA;
+      padding: 10px;
+      @include HN-Regular;
+      top: -36px;
+      border-bottom: 0px;
+      padding-bottom: 5px;
+      border-bottom: 1px solid white;
+      span.organization-logo {
+        display: inline-block;
+        height: 10px;
+        width: 10px;
+        background: red;
+        margin-right: 5px;
+      }
+    }
+    .name {
+      @include HN-Bold;
+      font-size: 20px;
+      border-bottom: 1px solid #dadada;
+      padding-bottom: 8px;
+      margin-bottom: 5px;
+    }
+    .location {
+      @include HN-Bold;
+    }
+    .description {
+      margin-top: 5px;
+      padding-top: 5px;
+      border-top: 1px solid #dadada;
+    }
   }
 }
