--- a/app/assets/javascripts/backbone/templates/organizations/browse/browse_result.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/organizations/browse/browse_result.jst.ejs
@@ -1,6 +1,8 @@
 <div class="cover"></div>
 <div class="content">
-  <div class="type">Organization:</div>
   <div class="name"><%= result.get('name') %></div>
-  <div class="description"><%= result.get('bio') %></div>
+  <div id="categories"></div>
+  <% if(result.get('bio')) { %>
+    <div class="description"><%= result.get('bio') %></div>
+  <% } %>
 </div>
