--- a/app/assets/javascripts/backbone/templates/events/browse/browse_result.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/events/browse/browse_result.jst.ejs
@@ -1,6 +1,6 @@
 <div class="cover"></div>
 <div class="content">
-  <div class="organization"><span class="organization-logo"></span><%= result.get('organization') %></div>
+  <div class="organization"><a href="#organizations/<%= result.get('organization_id') %>"><span class="organization-logo"></span><%= result.get('organization') %></a></div>
   <div class="name"><%= result.get('name') %></div>
   <div class="location"><%= result.get('location') %></div>
   <div class="time"><%= startAt %></div>
