--- a/app/assets/javascripts/backbone/templates/organizations/menu.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/organizations/menu.jst.ejs
@@ -1,4 +1,4 @@
-<li><a data-type='info' href="#organizations/<%= id %>/info">Organization Info</a></li>
-<li><a data-type='events' href="#organizations/<%= id %>/events">Events</a></li>
-<li><a data-type='users' href='#organizations/<%= id %>/users'>Users</a></li>
-<li><a data-type='settings' href="#organizations/<%= id %>/settings">Settings</a></li>
+<li><a data-type='info' href="#organizations/edit/<%= id %>/info">Organization Info</a></li>
+<li><a data-type='events' href="#organizations/edit/<%= id %>/events">Events</a></li>
+<li><a data-type='users' href='#organizations/edit/<%= id %>/users'>Users</a></li>
+<li><a data-type='settings' href="#organizations/edit/<%= id %>/settings">Settings</a></li>
