--- a/app/assets/javascripts/backbone/templates/organizations/browse/browse_result.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/organizations/browse/browse_result.jst.ejs
@@ -1,6 +1,6 @@
 <div class="cover"></div>
 <div class="content">
-  <div class="name"><%= result.get('name') %></div>
+  <div class="name"><a href="#organizations/<%= result.id %>"><%= result.get('name') %></a></div>
   <div id="categories"></div>
   <% if(result.get('bio')) { %>
     <div class="description"><%= result.get('bio') %></div>
