--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,27 +1,3 @@
-// @font-face {
-//   font-family: "MyMyriad";
-//   font-style: normal;
-//   font-weight: 200;
-//   src: local("MyMyriad"), 
-//     url(/assets/MyriadPro-LightSemiExt.otf) format("opentype");
-// }
-// 
-// @font-face {
-//   font-family: "MyMyriad";
-//   font-style: normal;
-//   font-weight: 400;
-//   src: local("MyMyriad"), 
-//     url(/assets/MyriadPro-Regular.otf) format("opentype");
-// }
-// 
-// @font-face {
-//   font-family: "MyMyriad";
-//   font-style: normal;
-//   font-weight: 700;
-//   src: local("MyMyriad"), 
-//     url(/assets/MyriadPro-Semibold.otf) format("opentype");
-// }
-
 $yellow: rgba(255,203,5,1);
 $blue: #4BA6FF;
 $font: 12px;
@@ -51,6 +27,10 @@ input {
 
 td {
   padding: 0;
+}
+
+h3 {
+  border-bottom: 2px solid #dadada;
 }
 
 button {
@@ -102,24 +82,27 @@ $side_padding: 15px;
     font-size: 13px;
     @include HN-Bold;
     @include transition(color 0.1s);
+    padding: 0px $side_padding;
   }
 }
 
 #logo {
   border-left: 1px solid #dadada;
   a {
-    color: $blue;
-    font-weight: 200;
-    font-size: 20px;
-    line-height: $header_height;
-    text-decoration: none;
+    display: block;
+    background-image: url('/assets/y_logo_200.png');
+    background-position: center;
+    height: 50px;
+    width: 50px;
+    background-repeat: no-repeat;
+    background-size: 35px;
     @include transition(0.1s);
+    padding: 0px 5px;
   }
 }
 
 .link, #logo {
   float: left;
-  padding: 0px $side_padding;
   border-right: 1px solid #dadada;
   @include transition(background 0.1s);
   &:hover {
