--- a/app/assets/stylesheets/organizations.css.scss
+++ b/app/assets/stylesheets/organizations.css.scss
@@ -108,7 +108,7 @@ ul.main-menu {
   padding: 15px;
 }
 
-table {
+table#organization-events-list {
   width: $main-width;
 }
 
@@ -124,5 +124,38 @@ tr.organization-event {
   }
   .description {
     width: 300px;
+  }
+}
+
+//Show
+.content-calendar {
+  width: 100%;
+  height: 400px;
+  background: #dadada;
+  overflow: scroll;
+  table {
+    width: 100%;
+  }
+  td.cal_day_hours {
+    width: 50px;
+    background: #333;
+    span {
+      color: white;
+    }
+  }
+  td {
+    border-right: 1px solid white;
+    &:last {
+      border-right: 0px;
+    }
+  }
+}
+.organization-header {
+  border-bottom: 1px solid #dadada;
+  position: relative;
+  button {
+    position: absolute;
+    top: 5px;
+    right: 0px;
   }
 }
