--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,11 +14,11 @@
 <div class="wrapper">
   <div class="header">
     <div class="header-container">
-      <div id="logo"><a href="/">Yale Events</a></div>
+      <div id="logo"><a href="/"></a></div>
       <% if current_user %>
         <div class="link"><a href="/#browse">Browse</a></div>
         <div class="link"><a href="/#calendar">Calendar</a></div>
-        <div class="link"><a href="/#organizations">Organizations</a></div>
+        <div class="link"><a href="/#organizations/edit">Organizations</a></div>
         <div class="link"><a href="/#about">About</a></div>
       <% end %>
       <div id="menu">
