--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -130,7 +130,7 @@ $side_padding: 15px;
   width: 100%;
   min-width: $min_width;
   min-height: 500px;
-  top: $header_height;
+  top: 53px;
   height: -webkit-calc(100% - 50px);
   height: -o-calc(100% - 50px);
   height: -moz-calc(100% - 50px);
