--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,6 +1,6 @@
 @import "bourbon";
 @import "bootstrap";
-@import "fonts";
+@import "mixins";
 @import "bootstrap_override";
 @import "main";
 @import "feed";
