following and unfollowing organizations

--- a/app/assets/javascripts/backbone/templates/organizations/show/show.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/organizations/show/show.jst.ejs
@@ -3,7 +3,7 @@
 <div class="content-container">
   <div class="organization-header">
     <h1><%= organization.get('name') %></h1>
-    <button>Follow</button>
+    <button class="follow">Follow</button>
   </div>
   <% if( organization.get('categories') ) { %>
     <div class="organization-categories">
