--- a/app/assets/javascripts/backbone/templates/organizations/info/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/organizations/info/index.jst.ejs
@@ -1,6 +1,6 @@
 <form id='organization-form' accept-charset="UTF-8" action="/organizations" enctype="multipart/form-data" method="post">
   <label>Organization Name:</label>
-  <input name='name' value='<%= name %>' />
+  <input type='text' name='name' value='<%= name %>' />
   <label>Organization Description:</label>
   <textarea name='bio' placeholder="What is <%= name %>..."><%= bio ? bio : "" %></textarea>
   <label>Organization Logo:</label>
