--- a/app/assets/javascripts/backbone/templates/events/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/events/index.jst.ejs
@@ -1,12 +1,6 @@
-<div class="sidebar">
-  <div class="sidebar-header">Your Subscriptions</div>
-  <div class="sidebar-label">Organizations</div>
-  <div class="sidebar-list" id="subscribed-organizations-list"></div>
-  <div class="sidebar-label">Categories</div>
-  <div class="sidebar-list" id="subscribed-categories-list"></div>
-</div>
-<div class="feed" id="feed-list">
-</div>
-<div class="calendar" id="calendar-container">
-  <div class="cal-popover">hey</div>
+<div class="content-calendar">Calendar</div>
+<div class="content-body">
+  <div class="content-body-container">
+    Feed
+  </div>
 </div>
