--- a/app/assets/javascripts/backbone/templates/events/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/events/index.jst.ejs
@@ -1,6 +1,5 @@
-<div class="content-calendar">Calendar</div>
+<div class="content-calendar"></div>
 <div class="content-body">
   <div class="content-body-container">
-    Feed
   </div>
 </div>
