--- a/app/assets/javascripts/backbone/templates/calendar/week/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/calendar/week/index.jst.ejs
@@ -1,17 +1,31 @@
-<div class="cal-body">
-  <div class="cal-multiday"></div>
-  <table class="cal-body-table">
+<table class="cal-table">
+  <!--
+  <thead>
+    <tr>
+      <td></td>
+      <% formatString = "ddd - MM / DD"; %>
+      <% for(i=0; i<7; i++) { %>
+        <td class="cal-day">
+          <%= moment(startDate).add('d', i).format(formatString) %>
+        </td>
+      <% } %>
+    </tr>
+  </thead>
+  -->
+  <tbody>
     <tr class="cal-day-container">
+      <!--
       <td>
-        <div class="hour hour-label"><span class="hour-num">12 a.m. </span></div>
-        <% for(i=1; i<12; i++) { %>
-          <div class="hour hour-label"><span class="hour-num"><%= i %> a.m. </span></div>
+        <div class="hour-label">12 a.m. </div>
+        <% for(i=2; i<12; i+=2) { %>
+          <div class="hour-label"><%= i %> a.m.</div>
         <% } %>
-        <div class="hour hour-label"><span class="hour-num">12 p.m. </span></div>
-        <% for(i=1; i<12; i++) { %>
-          <div class="hour hour-label"><span class="hour-num"><%= i %> p.m. </span></div>
+        <div class="hour-label">12 p.m. </div>
+        <% for(i=2; i<12; i+=2) { %>
+          <div class="hour-label"><%= i %> p.m.</div>
         <% } %>
       </td>
+    -->
     </tr>
-  </table>
-</div>
+  </tbody>
+</table>
