--- a/app/assets/javascripts/backbone/templates/browse/event.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/browse/event.jst.ejs
@@ -1,7 +1,7 @@
 <div class="cover"></div>
 <div class="content">
   <div class="organization"><a href="#organizations/<%= result.get('organization_id') %>"><span class="organization-logo"></span><%= result.get('organization') %></a></div>
-  <div class="name"><%= result.get('name') %></div>
+  <div class="name"><a href="#events/<%= result.get('id') %>"><%= result.get('name') %></a></div>
   <div class="location"><%= result.get('location') %></div>
   <div class="time"><%= startAt %></div>
   <div class="description"><%= result.get('description') %></div>
