--- a/app/assets/javascripts/backbone/templates/calendar/month/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/calendar/month/index.jst.ejs
@@ -1,3 +1,5 @@
 <div class="cal-body">
   <table class="cal-body-table"></table>
 </div>
+<div class="global-overlay"></div>
+<div class="cal-popover"></div>
