--- a/app/assets/javascripts/backbone/templates/calendar/month/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/calendar/month/index.jst.ejs
@@ -1,5 +1,1 @@
-<div class="cal-body">
-  <table class="cal-body-table"></table>
-</div>
-<div class="global-overlay"></div>
-<div class="cal-popover"></div>
+<table class="cal-table"></table>
