--- a/app/assets/javascripts/backbone/templates/calendar/week/event.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/calendar/week/event.jst.ejs
@@ -2,6 +2,6 @@
 <% startAt = moment(event.get("start_at")); %>
 <% endAt = moment(event.get("end_at")); %>
 <p class="event-time">
-  <%= startAt.format("h:mm a") %>
+  <%= startAt.format("h:mm a") %> - <%= endAt.format("h:mm a") %>
 </p>
 <p>(ID: <%= event.get("eventId") %>)</p>
