--- a/app/assets/javascripts/backbone/templates/feed/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/feed/index.jst.ejs
@@ -1,5 +1,12 @@
 <div class="content-calendar"></div>
 <div class="content-body">
   <div class="content-body-container">
+    <div class="cal-nav">
+      <div class="today">Today</div>
+      <div class="next">Next Week</div>
+      <div class="previous">Previous Week</div>
+      <div class="filter">Filter...</div>
+    </div>
+    <div class="body-feed"></div>
   </div>
 </div>
