--- a/app/assets/stylesheets/feed.css.scss
+++ b/app/assets/stylesheets/feed.css.scss
@@ -1,11 +1,7 @@
 /* ====== NAVIGATION ======= */
 
 .cal-nav {
-  min-height: 50px;
-  border: 1px solid #dadada;
-  background: white;
-  margin-top: 5px;
-  margin-bottom: 30px;
+  margin: 15px 0 20px;
 }
 
 /* ====== FEED ==== */
