--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
       <% if current_user %>
         <div class="link"><a href="/#browse">Browse</a></div>
         <div class="link"><a href="/#calendar">Calendar</a></div>
-        <div class="link"><a href="/#dashboard">Organizations</a></div>
+        <div class="link"><a href="/#dashboard">Dashboard</a></div>
         <div class="link"><a href="/#about">About</a></div>
       <% end %>
       <div id="menu">
