--- a/app/assets/stylesheets/calendar.css.scss
+++ b/app/assets/stylesheets/calendar.css.scss
@@ -115,7 +115,7 @@ $hour-height: 4.1667%;
   position: relative;
   top: -2*$marker-img-height/3;
   height: $marker-img-height;
-  left: 0;
+  left: 5px;
 }
 
 .day-tag {
