--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -75,54 +75,34 @@ button {
 .header-container {
   width: $width;
   margin: auto;
+  font-size: 0;
 }
 
 .link {
-  a {
-    display: block;
-    line-height: $header-height;
-    color: #333;
-    font-size: 13px;
-    @include HN-Bold;
-    @include transition(color 0.1s);
-    padding: 0px $side-padding;
-  }
+  line-height: $header-height;
+  color: #333;
+  font-size: 13px;
+  font-weight: bold;
   border-right: 1px solid #dadada;
+  @include transition(all 0.1s);
+  display: inline-block;
+  padding: 0 10px;
+  &:hover {
+    text-decoration: none;
+    color: darken($blue, 10%);
+    background: #fafafa;
+    @include box-shadow(inset 0 0 1px rgba(black, 0.2));
+  }
 }
 
 #logo {
-  border-right: 1px solid #dadada;
-  border-left: 1px solid #dadada;
-  a {
-    display: block;
-    background-image: url('/assets/y_logo_200.png');
-    background-position: center;
-    height: 50px;
-    width: 50px;
-    background-repeat: no-repeat;
-    background-size: 35px;
-    @include transition(0.1s);
-    padding: 0px 5px;
-  }
+  height: 30px;
+  width: 30px;
+  vertical-align: -15%;
 }
 
-.link, #logo {
-  float: left;
-  @include transition(background 0.1s);
-  &:hover {
-    a {
-      text-decoration: none;
-      color: $blue;
-    }
-    background: #fafafa;
-  }
-}
-
-#menu {
-  float: right;
-  line-height: $header-height;
-  padding: 0px $side-padding;
-  border-right: 1px solid #dadada;
+.pull-right .link {
+  border-right: none;
   border-left: 1px solid #dadada;
 }
 
