--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,19 +15,37 @@
 <div class="wrapper">
   <div class="header">
     <div class="header-container">
-      <div id="logo"><a href="/"></a></div>
+      <a href="/"><div class="link">
+        <img id="logo" src="/assets/y_logo_200.png" alt="Yale Go" />
+      </div></a>
       <% if current_user %>
-        <div class="link"><a href="/#browse">Browse</a></div>
-        <div class="link"><a href="/#calendar">Calendar</a></div>
-        <div class="link"><a href="/#dashboard">Dashboard</a></div>
-        <div class="link"><a href="/#about">About</a></div>
+        <a href="#browse">
+          <div class="link">Browse</div>
+        </a>
+        <a href="#calendar">
+          <div class="link">Calendar</div>
+        </a>
+        <a href="#dashboard">
+          <div class="link">Dashboard</div>
+        </a>
+        <a href="#about">
+          <div class="link">About</div>
+        </a>
       <% end %>
-      <div id="menu">
+      <div class="pull-right">
         <% if current_user %>
-          <a href="#preferences"><%= current_user.name %></a>
-          <a href="/logout">Logout</a>
+          <a href="#preferences">
+            <div class="link">
+              <%= current_user.name %>
+            </div>
+          </a>
+          <a href="/logout">
+            <div class="link">Logout</div>
+          </a>
         <% else %>
-          <a href="/login">Login</a>
+          <a href="/login">
+            <div class="link">Login</div>
+          </a>
         <% end %>
       </div>
     </div>
